loopfor.LoopCourseForest.scala.error
Compilation error:
LoopCourseForest:1: error: not found: value avant
for (x<-1 to 7) {for (y<-1 to 4) {avant();avant();avant();avant();gauche();avant();avant();droite();avant();avant();avant();avant();droite();avant();avant();gauche();avant();avant();avant();avant();gauche()}} 
                                  ^LoopCourseForest:1: error: not found: value avant
for (x<-1 to 7) {for (y<-1 to 4) {avant();avant();avant();avant();gauche();avant();avant();droite();avant();avant();avant();avant();droite();avant();avant();gauche();avant();avant();avant();avant();gauche()}} 
                                          ^LoopCourseForest:1: error: not found: value avant
for (x<-1 to 7) {for (y<-1 to 4) {avant();avant();avant();avant();gauche();avant();avant();droite();avant();avant();avant();avant();droite();avant();avant();gauche();avant();avant();avant();avant();gauche()}} 
                                                  ^LoopCourseForest:1: error: not found: value avant
for (x<-1 to 7) {for (y<-1 to 4) {avant();avant();avant();avant();gauche();avant();avant();droite();avant();avant();avant();avant();droite();avant();avant();gauche();avant();avant();avant();avant();gauche()}} 
                                                          ^LoopCourseForest:1: error: not found: value avant
for (x<-1 to 7) {for (y<-1 to 4) {avant();avant();avant();avant();gauche();avant();avant();droite();avant();avant();avant();avant();droite();avant();avant();gauche();avant();avant();avant();avant();gauche()}} 
                                                                           ^LoopCourseForest:1: error: not found: value avant
for (x<-1 to 7) {for (y<-1 to 4) {avant();avant();avant();avant();gauche();avant();avant();droite();avant();avant();avant();avant();droite();avant();avant();gauche();avant();avant();avant();avant();gauche()}} 
                                                                                   ^LoopCourseForest:1: error: not found: value avant
for (x<-1 to 7) {for (y<-1 to 4) {avant();avant();avant();avant();gauche();avant();avant();droite();avant();avant();avant();avant();droite();avant();avant();gauche();avant();avant();avant();avant();gauche()}} 
                                                                                                    ^LoopCourseForest:1: error: not found: value avant
for (x<-1 to 7) {for (y<-1 to 4) {avant();avant();avant();avant();gauche();avant();avant();droite();avant();avant();avant();avant();droite();avant();avant();gauche();avant();avant();avant();avant();gauche()}} 
                                                                                                            ^LoopCourseForest:1: error: not found: value avant
for (x<-1 to 7) {for (y<-1 to 4) {avant();avant();avant();avant();gauche();avant();avant();droite();avant();avant();avant();avant();droite();avant();avant();gauche();avant();avant();avant();avant();gauche()}} 
                                                                                                                    ^LoopCourseForest:1: error: not found: value avant
for (x<-1 to 7) {for (y<-1 to 4) {avant();avant();avant();avant();gauche();avant();avant();droite();avant();avant();avant();avant();droite();avant();avant();gauche();avant();avant();avant();avant();gauche()}} 
                                                                                                                            ^LoopCourseForest:1: error: not found: value avant
for (x<-1 to 7) {for (y<-1 to 4) {avant();avant();avant();avant();gauche();avant();avant();droite();avant();avant();avant();avant();droite();avant();avant();gauche();avant();avant();avant();avant();gauche()}} 
                                                                                                                                             ^LoopCourseForest:1: error: not found: value avant
for (x<-1 to 7) {for (y<-1 to 4) {avant();avant();avant();avant();gauche();avant();avant();droite();avant();avant();avant();avant();droite();avant();avant();gauche();avant();avant();avant();avant();gauche()}} 
                                                                                                                                                     ^LoopCourseForest:1: error: not found: value avant
for (x<-1 to 7) {for (y<-1 to 4) {avant();avant();avant();avant();gauche();avant();avant();droite();avant();avant();avant();avant();droite();avant();avant();gauche();avant();avant();avant();avant();gauche()}} 
                                                                                                                                                                      ^LoopCourseForest:1: error: not found: value avant
for (x<-1 to 7) {for (y<-1 to 4) {avant();avant();avant();avant();gauche();avant();avant();droite();avant();avant();avant();avant();droite();avant();avant();gauche();avant();avant();avant();avant();gauche()}} 
                                                                                                                                                                              ^LoopCourseForest:1: error: not found: value avant
for (x<-1 to 7) {for (y<-1 to 4) {avant();avant();avant();avant();gauche();avant();avant();droite();avant();avant();avant();avant();droite();avant();avant();gauche();avant();avant();avant();avant();gauche()}} 
                                                                                                                                                                                      ^LoopCourseForest:1: error: not found: value avant
for (x<-1 to 7) {for (y<-1 to 4) {avant();avant();avant();avant();gauche();avant();avant();droite();avant();avant();avant();avant();droite();avant();avant();gauche();avant();avant();avant();avant();gauche()}} 
                                                                                                                                                                                              ^